# elpida

./: .gitignore  .gitlab-ci.yml  .gitmodules  AppImageBuilder.aarch64.yml  AppImageBuilder.amd64.yml  AppImageBuilder.cli.aarch64.yml  AppImageBuilder.cli.amd64.yml  AppImageBuilder.cli.armhf.yml  AppImageBuilder.qt.aarch64.yml  AppImageBuilder.qt.amd64.yml  AppImageBuilder.qt.armhf.yml  AppImageBuilder.yml  CMakeLists.txt  LICENSE  OptimizationFlags.txt  OptimizationFlags.x86-64.txt  README.md  TODO  TODO.md  build.sh  gitlab-ci.sh  meson.build  setLinks.sh
Elpida/: Config.hpp.in  CpuFeature.hpp  CpuInfo.cpp  CpuInfo.hpp  Event.cpp  Event.hpp  EventSubscription.cpp  EventSubscription.hpp  Exportable.cpp  Exportable.hpp  MemoryInfo.cpp  MemoryInfo.hpp  MultiThreadTask.cpp  MultiThreadTask.hpp  OffThreadExecutor.hpp  Plugin.cpp  Plugin.hpp  PluginLoader.cpp  PluginLoader.hpp  Runner.cpp  Runner.hpp  SharedLibrary.cpp  SharedLibrary.hpp  SharedLibraryLoader.cpp  SharedLibraryLoader.hpp  SingleThreadTask.cpp  SingleThreadTask.hpp  Task.cpp  Task.hpp  TaskAffinity.cpp  TaskAffinity.hpp  TaskBatch.cpp  TaskBatch.hpp  TaskBatchLoader.cpp  TaskBatchLoader.hpp  TaskBatchWrapper.cpp  TaskBatchWrapper.hpp  TaskFactory.cpp  TaskFactory.hpp  TaskMetrics.cpp  (+9 more)
Elpida/Exceptions/: ElpidaException.cpp  ElpidaException.hpp  IOException.cpp  IOException.hpp  OutOfRangeException.hpp  ParserException.hpp  meson.build
Elpida/Topology/: ProcessorNode.cpp  ProcessorNode.hpp  SystemTopology.cpp  SystemTopology.hpp  meson.build
Elpida/Types/: Array.hpp  Float.hpp  Integer.hpp  List.hpp  Map.hpp  Primitives.hpp  RawData.hpp  SizedStruct.hpp  String.hpp  meson.build
Elpida/Utilities/: CommandParser.cpp  CommandParser.hpp  FileSystem.cpp  FileSystem.hpp  Image.hpp  ImageEncoder.cpp  ImageEncoder.hpp  Logger.cpp  Logger.hpp  MemoryFile.cpp  MemoryFile.hpp  NonCopyable.cpp  Pixel.cpp  Pixel.hpp  Singleton.cpp  Singleton.hpp  TextColumn.cpp  TextColumn.hpp  TextRow.cpp  TextRow.hpp  TextTable.cpp  TextTable.hpp  ValueUtilities.cpp  ValueUtilities.hpp  meson.build
Libraries/AgnerFog/: .gitignore  meson.build
Libraries/hwloc/: meson.build
Libraries/libpng/: meson.build
Libraries/zlib/: .gitignore  meson.build
TaskBatches/: Config.hpp.in  QtTaskBatchWrapper.cpp  QtTaskBatchWrapper.hpp  meson.build
TaskBatches/General/: AlignedMemory.cpp  AlignedMemory.hpp  AllocateMemory.cpp  AllocateMemory.hpp  Memory.cpp  Memory.hpp  MemoryChunk.cpp  MemoryChunk.hpp  NumaAllocatePerThread.cpp  NumaAllocatePerThread.hpp  NumaMemory.cpp  NumaMemory.hpp  Plugin.cpp  ReadFile.cpp  ReadFile.hpp  UnalignedMemory.cpp  UnalignedMemory.hpp  WriteFile.cpp  WriteFile.hpp  meson.build
TaskBatches/Image/: ConvertToFloat.cpp  ConvertToFloat.hpp  ConvertToUInt8.cpp  ConvertToUInt8.hpp  FloydSteinberg.cpp  FloydSteinberg.hpp  GrayscaleAverage.cpp  GrayscaleAverage.hpp  ImageTaskBatch.cpp  ImageTaskBatch.hpp  ImageTasksProperties.cpp  ImageTasksProperties.hpp  ImageTasksProperties.ui  Plugin.cpp  PngDecoding.cpp  PngDecoding.hpp  PngEncoding.cpp  PngEncoding.hpp  meson.build
TaskBatches/Memory/: MemoryLatency.cpp  MemoryLatency.hpp  MemoryLatencyTaskBatch.cpp  MemoryLatencyTaskBatch.hpp  MemoryRead.cpp  MemoryRead.hpp  MemoryReadCached.cpp  MemoryReadCached.hpp  MemoryReadCachedTaskBatch.cpp  MemoryReadCachedTaskBatch.hpp  MemoryReadVolatile.cpp  MemoryReadVolatile.hpp  MemoryReadVolatileTaskBatch.cpp  MemoryReadVolatileTaskBatch.hpp  MemoryTaskBatch.cpp  MemoryTaskBatch.hpp  MemoryTasksProperties.cpp  MemoryTasksProperties.hpp  MemoryTasksPropertiesWithChart.cpp  MemoryTasksPropertiesWithChart.hpp  MultiThreadMemoryChunksRead.cpp  MultiThreadMemoryChunksRead.hpp  MultiThreadMemoryRead.cpp  MultiThreadMemoryRead.hpp  MultithreadMemoryChunksReadCachedTaskBatch.cpp  MultithreadMemoryChunksReadCachedTaskBatch.hpp  Plugin.cpp  WorkingSetSizes.cpp  WorkingSetSizes.hpp  meson.build
Tests/: CommandParser.Test.cpp  Event.Test.cpp  FileSystem.Test.cpp  meson.build
Tools/CLI/: BadCommandException.cpp  BadCommandException.hpp  CLIOptions.cpp  CLIOptions.hpp  CommandNotFoundException.cpp  CommandNotFoundException.hpp  CommandRegistry.cpp  CommandRegistry.hpp  Interpreter.cpp  Interpreter.hpp  InterpreterCommand.cpp  InterpreterCommand.hpp  Main.cpp  TaskBatchLoader.cpp  TaskBatchLoader.hpp  meson.build
Tools/Qt/: ElpidaManager.cpp  ElpidaManager.hpp  ImageTasksProperies.cpp  ImageTasksProperies.hpp  ImageTasksProperies.ui  Images.qrc  ListItemConfigurable.ui  ListItemWithButton.hpp  ListItemWithButton.ui  LogsDialog.cpp  LogsDialog.hpp  LogsDialog.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MainWindow.ui.autosave  MascotWidget.hpp  RunTaskBatchDialog.cpp  RunTaskBatchDialog.hpp  RunTaskBatchDialog.ui  StaticAspectRatioWidget.cpp  StaticAspectRatioWidget.hpp  TaskBatchPageLoader.cpp  TaskBatchPageLoader.hpp  TaskBatchProperties.cpp  TaskBatchProperties.hpp  TaskBatchProperties.ui  TaskBatchesWidget.cpp  TaskBatchesWidget.hpp  TaskBatchesWidget.ui  TopologyFrame.cpp  TopologyWidget.cpp  TopologyWidget.hpp  TopologyWidget.ui  elpida-qt.pro  frame.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+1 more)
apps/Application/: BenchmarkBaseScores.hpp  CMakeLists.txt  DataUploader.cpp  DataUploader.hpp  Event.cpp  Event.hpp  EventSubscription.cpp  EventSubscription.hpp  FullBenchmarkInstancesLoader.cpp  FullBenchmarkInstancesLoader.hpp  ModelBuilderJson.cpp  ModelBuilderJson.hpp  ResultSerializer.cpp  ResultSerializer.hpp  httplib.hpp
apps/BackEndInfoDumper/: CMakeLists.txt  Main.cpp
src/: CMakeLists.txt  Config.hpp.in  CpuFeature.cpp  CpuFeature.hpp  CpuInfo.cpp  CpuInfo.hpp  Exportable.cpp  Exportable.hpp  IRunnable.hpp  MultiThreadTask.cpp  MultiThreadTask.hpp  Runner.cpp  Runner.hpp  SingleThreadTask.cpp  SingleThreadTask.hpp  Task.cpp  Task.hpp  TaskBatch.cpp  TaskBatch.hpp  TaskMetrics.cpp  TaskMetrics.hpp  TaskThread.cpp  TaskThread.hpp  TaskThroughput.cpp  TaskThroughput.hpp  Timer.cpp  Timer.hpp  main.cpp  meson.build
tests/: CMakeLists.txt  CommandParser.Test.cpp  Event.Test.cpp  FileSystem.Test.cpp  meson.build
(+2346 files in other folders)
